--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -57,7 +57,7 @@
             internacionales y locales.
           </p>
           <div class="hero-buttons">
-            <button class="btn-primary"><a href="#" class="button-link-black">CONTACTA CON NOSOTROS</a></button>
+            <button class="btn-primary m-bottom-mobile"><a href="#" class="button-link-black">CONTACTA CON NOSOTROS</a></button>
             <button class="btn-secondary"><a href="#" class="button-link-white">CASOS DE ÉXITO</a></button>
           </div>
         </div>
