--- a/galeria-responsive/index1.html
+++ b/galeria-responsive/index1.html
@@ -7,9 +7,9 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body class="grid">
-    <div class="item-1"><img src="imagenes/bloque3-img1.jpg" alt=" "></div>
-    <div class="item-2"><img src="imagenes/bloque3-img2.jpg" alt=" "></div>
-    <div class="item-3">
+    <div class="item item-1"><img src="imagenes/bloque3-img1.jpg" alt=" "></div>
+    <div class="item item-2"><img src="imagenes/bloque3-img2.jpg" alt=" "></div>
+    <div class="item item-3">
         <img src="imagenes/bloque3-img4.jpg" alt=" ">
     </div>
     <div class="item-4">
@@ -24,20 +24,20 @@
            <p class="person">John Doe</p>
         </div>
     </div>
-    <div class="item-6"><img src="imagenes/bloque3-img3.jpg" alt=""></div>
-    <div class="item-7"><img src="imagenes/bloque3-img5.jpg" alt=""></div>
-    <div class="item-8"><img src="imagenes/bloque3-img6.jpg" alt=""></div>
-    <div class="item-9"><img src="imagenes/bloque3-img7.jpg" alt=""></div>
-    <div class="item-10">
+    <div class="item item-6"><img src="imagenes/bloque3-img3.jpg" alt=""></div>
+    <div class="item item-7"><img src="imagenes/bloque3-img5.jpg" alt=""></div>
+    <div class="item item-8"><img src="imagenes/bloque3-img6.jpg" alt=""></div>
+    <div class="item item-9"><img src="imagenes/bloque3-img7.jpg" alt=""></div>
+    <div class="item item-10">
         <div class="white-box">
            <p class="text">Lorem ipsum dolor sit amet consecteur adipiscing</p>
            <p class="person">John Doe</p>
         </div>
     </div>
-    <div class="item-11"><img src="imagenes/bloque3-img9.jpg" alt=""></div>
-    <div class="item-12">
+    <div class="item item-11"><img src="imagenes/bloque3-img9.jpg" alt=""></div>
+    <div class="item item-12">
         <h1 class="title">Buena suerte</h1>
     </div>
-    <div class="item-13"><img src="imagenes/bloque3-img8.jpg" alt=""></div>
+    <div class="item item-13"><img src="imagenes/bloque3-img8.jpg" alt=""></div>
 </body>
 </html>
